@@ -40,6 +40,7 @@ class WCS_Cart_Renewal {
 
 		// When a failed/pending renewal order is paid for via checkout, ensure a new order isn't created due to mismatched cart hashes
 		add_filter( 'woocommerce_create_order', array( &$this, 'update_cart_hash' ), 10, 1 );
+		add_filter( 'woocommerce_order_has_status', array( &$this, 'set_renewal_order_cart_hash_on_block_checkout' ), 10, 3 );
 
 		// When a user is prevented from paying for a failed/pending renewal order because they aren't logged in, redirect them back after login
 		add_filter( 'woocommerce_login_redirect', array( &$this, 'maybe_redirect_after_login' ), 10, 2 );
@@ -416,6 +417,10 @@ class WCS_Cart_Renewal {
 	 * Restore renewal flag when cart is reset and modify Product object with renewal order related info
 	 *
 	 * @since 1.0.0 - Migrated from WooCommerce Subscriptions v2.0
+	 *
+	 * @param array  $cart_item_session_data Cart item session data.
+	 * @param array  $cart_item              Cart item data.
+	 * @param string $key                    Cart item key.
 	 */
 	public function get_cart_item_from_session( $cart_item_session_data, $cart_item, $key ) {
 
@@ -429,7 +434,23 @@ class WCS_Cart_Renewal {
 
 			if ( $subscription ) {
 				$subscription_items = $subscription->get_items();
-				$item_to_renew      = $subscription_items[ $cart_item_session_data[ $this->cart_item_key ]['line_item_id'] ];
+
+				/**
+				 * Find the subscription or order line item that represents this cart item.
+				 *
+				 * If cart item data correctly records a valid line item ID, use that to find the line item.
+				 * Otherwise, use the cart item key stored in line item meta.
+				 */
+				if ( isset( $subscription_items[ $cart_item_session_data[ $this->cart_item_key ]['line_item_id'] ] ) ) {
+					$item_to_renew = $subscription_items[ $cart_item_session_data[ $this->cart_item_key ]['line_item_id'] ];
+				} else {
+					foreach ( $subscription_items as $item ) {
+						if ( $item->get_meta( '_cart_item_key_' . $this->cart_item_key, true ) === $key ) {
+							$item_to_renew = $item;
+							break;
+						}
+					}
+				}
 
 				$price = $item_to_renew['line_subtotal'];
 
@@ -979,10 +1000,19 @@ class WCS_Cart_Renewal {
 	 * order items haven't changed by checking for a cart hash on the order, so we need to set
 	 * that here. @see WC_Checkout::create_order()
 	 *
+	 * @param WC_Order|int $order The order object or order ID.
+	 *
 	 * @since 1.0.0 - Migrated from WooCommerce Subscriptions v2.0.14
 	 */
-	protected function set_cart_hash( $order_id ) {
-		$order = wc_get_order( $order_id );
+	protected function set_cart_hash( $order ) {
+
+		if ( ! is_a( $order, 'WC_Abstract_Order' ) ) {
+			$order = wc_get_order( $order );
+
+			if ( ! $order ) {
+				return;
+			}
+		}
 
 		// Use cart hash generator introduced in WooCommerce 3.6
 		if ( is_callable( array( WC()->cart, 'get_cart_hash' ) ) ) {
@@ -991,7 +1021,8 @@ class WCS_Cart_Renewal {
 			$cart_hash = md5( json_encode( wc_clean( WC()->cart->get_cart_for_session() ) ) . WC()->cart->total );
 		}
 
-		wcs_set_objects_property( $order, 'cart_hash', $cart_hash );
+		$order->set_cart_hash( $cart_hash );
+		$order->save();
 	}
 
 	/**
@@ -1588,6 +1619,53 @@ class WCS_Cart_Renewal {
 	 */
 	public function validate_current_user( $order ) {
 		return current_user_can( 'pay_for_order', $order->get_id() );
+	}
+
+	/**
+	 * Sets the order cart hash when paying for a renewal order via the Block Checkout.
+	 *
+	 * This function is hooked onto the 'woocommerce_order_has_status' filter, is only applied during REST API requests, only applies to the
+	 * 'checkout-draft' status (which only Block Checkout orders use) and to renewal orders that are currently being paid for in the cart.
+	 * All other order statuses, orders and scenarios remain unaffected by this function.
+	 *
+	 * This function is necessary to override the default logic in @see DraftOrderTrait::is_valid_draft_order().
+	 * This function behaves similarly to @see WCS_Cart_Renewal::update_cart_hash() for the standard checkout and is hooked onto the 'woocommerce_create_order' filter.
+	 *
+	 * @param bool     $has_status Whether the order has the status.
+	 * @param WC_Order $order      The order.
+	 * @param string   $status     The status to check.
+	 *
+	 * @return bool Whether the order has the status. Unchanged by this function.
+	 */
+	public function set_renewal_order_cart_hash_on_block_checkout( $has_status, $order, $status ) {
+		/**
+		 * We only need to update the order's cart hash when the has_status() check is for 'checkout-draft' (indicating
+		 * this is the status check in DraftOrderTrait::is_valid_draft_order()) and the order doesn't have that status. Orders
+		 * which already have the checkout-draft status don't need to be updated to bypass the checkout block logic.
+		 */
+		if ( $has_status || 'checkout-draft' !== $status ) {
+			return $has_status;
+		}
+
+		/**
+		 * This function is only concerned with updating the order cart hash during REST API requests - which is the request
+		 * context where the Store API Checkout Block validates the order for payment resumption.
+		 */
+		if ( ! WC()->is_rest_api_request() ) {
+			return $has_status;
+		}
+
+		// If the order being validated is the order in the cart, then we need to update the cart hash so it can be resumed.
+		if ( $order && $order->get_id() === WC()->session->get( 'store_api_draft_order', 0 ) ) {
+			$cart_order = $this->get_order();
+
+			if ( $cart_order && $cart_order->get_id() === $order->get_id() ) {
+				// Note: We need to pass the order object so the order instance WooCommerce uses will have the updated hash.
+				$this->set_cart_hash( $order );
+			}
+		}
+
+		return $has_status;
 	}
 
 	/* Deprecated */
