@@ -2,6 +2,7 @@
 
 = 6.3.0 - xxxx-xx-xx =
 * Fix - When HPOS is enabled, make the orders_by_type_query filter box work in the WooCommerce orders screen.
+* Fix - Ensure renewal orders paid via the Block Checkout are correctly linked to their subscription.
 * Fix - Resolved an issue that caused paying for failed/pending parent orders that include Product Add-ons to not calculate the correct total.
 * Add - Introduce the "Subscription Relationship" column under the Orders list admin page when HPOS is enabled.
 * Fix - Store the correct subscription start date in postmeta and ordermeta when HPOS and data syncing is being used.
